// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 500;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
  color: #1a8385;
}

<h1
  class="c0"
>
  Hello world
</h1>
`;

exports[`it works with different kind and size 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 500;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
  color: #937032;
}

<h3
  class="c0"
>
  Hello world
</h3>
`;
